Added certificates accordion, deleted old minified junk

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                         California. Studied photography and
                         videomaking in Sundsvall, Sweden. Now I live in Espoo, Finland and study web development.</p>
 
-                    <div class="container" style=''>
+                    <div class="container">
                         <span class="text-center d-inline-block" style='margin: 5px;'>
                             <a href="edu.html" class="btn btn-primary btn-md w-100">My education</a>
                         </span>
