--- a/contacts.html
+++ b/contacts.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="container p-5 bg-white shadow rounded" style=''>
+    <div class="container p-5 bg-white shadow rounded">
 
         <!-- FORM STARTS HERE -->
 
