--- a/edu.html
+++ b/edu.html
@@ -157,6 +157,43 @@
                             <h5>Web Development</h5>
                         </strong> <br> <i>2020-2021 <br> Helsinki, Finland </i> <br> <br>
                         <p class="lead">Changing profession from media to IT. </p>
+
+                        <div class="accordion">
+                            <div class="card">
+                                <div class="card-header" id="headingExtra">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseExtra"
+                                            aria-expanded="false" aria-controls="collapseExtra" style='color: black'>
+                                            <span class="fa fa-plus mr-4 fa-lg" style='color: black'></span>
+                                            Certificates
+                                        </button>
+                                    </h5>
+                                </div>
+
+                                <div class="collapse" id="collapseExtra" aria-labelledby="headingExtra"
+                                    data-parent='#accordion'>
+                                    <div class="card-body">
+
+                                        <p class="lead">
+                                            <img src="./images/certificates/PavelArkharovcertificateReactJSCourse.png">
+                                            <img src='./images/certificates/PavelArkharovcertificateBootstrapCSS.png'>
+                                            <img
+                                                src='./images/certificates/PavelArkharovcertificateTypeScriptCourse.png'>
+                                            <img src='./images/certificates/MSChatbots_certificate_Arkharov.png'>
+                                            <img
+                                                src="./images/certificates/PavelArkharovcertificateRestfulAPICourse.png">
+                                            <img
+                                                src="./images/certificates/PavelArkharovcertificateSCRUMAgileCourse.png">
+                                            <img src="./images/certificates/PavelArkharovcertificateSEOCourse.png">
+                                            <br>
+                                            <br>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
