--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p class=''>Here you can find useful information about my skills, background and projects I've done.
                     </p>
 
-                    <div class="container" style=''>
+                    <div class="container">
                         <span class="text-center d-inline-block" style='margin: 5px;padding-bottom: 5px;'>
                             <a href="about.html" class="btn btn-primary btn-md w-100 full-width">About Me</a>
                         </span>
